# Interloper-Engine

./: CMakeLists.txt  README.md  TODO
App/Resources/Maps/: Test1.map  Test1.mtl
App/Resources/Shaders/: defaultFragment.glsl  defaultVertex.glsl  fb_frag.glsl  fb_vert.glsl
App/Source/: AppLayer.cpp  AppLayer.h  Main.cpp
Core/: CMakeLists.txt
Core/Source/Core/: Application.cpp  Application.h  Base.h  Collision.h  EditorLayer.cpp  EditorLayer.h  Input.h  InputManager.cpp  InputManager.h  MapLoader.cpp  MapLoader.h  Window.h
Core/Source/Core/Panels/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Core/Source/Core/Platform/: LinuxInput.cpp  LinuxInput.h
Core/Source/Core/Renderer/: Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Renderer.cpp  Renderer.h
Core/Source/Core/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  ScriptableEntity.h
